--- a/vue-todo-app/package.json
+++ b/vue-todo-app/package.json
@@ -12,7 +12,8 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "bootstrap": "^5.0.1",
-    "sweetalert2": "^11.0.18"
+    "sweetalert2": "^11.0.18",
+    "gsap": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
